added h1 element/class attribute

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Info on stores</title>
 </head>
 <body>
+    <header>
+    <h1>Welcome to my mind</h1>
+    </header>
     <!--Embedded Images-->
-    <img src="./assets/Images/Kiko-x-Asics.jpg" alt="kiko kostadinov" width="450px" height="450px">
+    <img src="./assets/Images/Kiko-x-Asics.jpg" alt="kiko kostadinov" width="400px" height="400px">
 <!--Opens link in new tab-->
     <a href="https://kikokostadinov.com/shop" target="_blank">Demo 1</a>
     <!--For link to appear bold-->
@@ -20,7 +23,7 @@
 
 <!--How to wash denim jeans-->
     <h3>How to actually wash denim jeans</h3>
-    <div id="lists">
+    <div class="lists">
     <ol>
         <li>Prepare a bucket of cold water</li>
         <li>Do not mix bleach or any harsh chemicals into water</li>
