changed css styles for text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Info on stores</title>
+    <title>Inside my mind</title>
 </head>
 <body>
     <header>
@@ -23,8 +23,7 @@
 
 <!--How to wash denim jeans-->
     <h3>How to actually wash denim jeans</h3>
-    <div class="lists">
-    <ol>
+    <ol class="lists">
         <li>Prepare a bucket of cold water</li>
         <li>Do not mix bleach or any harsh chemicals into water</li>
         <li>Use a small amount of hand soap</li>
@@ -32,19 +31,18 @@
     </ol>
     <!--Best Denim stores-->
     <h3>Best places to get denim jeans</h3>
-    <ul>
+    <ul class="lists">
         <li>The Weekday</li>
         <li>Levi's</li>
-        <li>Diesel</li>
-        
+        <li>Diesel</li>  
     </ul>
-</div>
+
 <!--Favourite Vintage stores/Designers-->
-<div id="table">
+<div class="table">
 <table style="width: 100%;">
     <tr>
         <th>Favourite Vintage stores</th>
-        <th>favourite designer stores</th>
+        <th>Favourite designer stores</th>
     </tr>
 </tr>
 <tr>
