--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
 <h3>How Kiko is elevating Menswear Fashion</h3>
 <!--Embedded YouTube link-->
 <iframe width="560" height="315" src="https://www.youtube.com/embed/SPyHLjRSlPw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border: 4px dashed white;"></iframe>
+<script src="./assets/script.js"></script>
 </body>
 </html>
